Tune VPS configs

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,20 @@
-# Database
-POSTGRES_USER=eduquest
-POSTGRES_PASSWORD=eduquest_secret
-POSTGRES_DB=eduquest
+# StudyMMO Production Environment Configuration
+# Copy this file to .env and fill in your values
 
-# Redis
-REDIS_URL=redis://localhost:6379
+# PostgreSQL
+POSTGRES_USER=studymmo
+POSTGRES_PASSWORD=your-secure-password-here
+POSTGRES_DB=studymmo
 
-# JWT
-JWT_SECRET=your-super-secret-jwt-key-change-in-production
-JWT_REFRESH_SECRET=your-super-secret-refresh-key-change-in-production
+# JWT Secrets (generate secure random strings)
+# Use: openssl rand -base64 32
+JWT_SECRET=your-jwt-secret-here
+JWT_REFRESH_SECRET=your-jwt-refresh-secret-here
+JWT_EXPIRES_IN=15m
+JWT_REFRESH_EXPIRES_IN=7d
 
-# Frontend
-NEXT_PUBLIC_API_URL=http://localhost:3001
+# Frontend URLs (change to your domain or VPS IP)
+# Example for domain: https://studymmo.example.com/api
+# Example for VPS IP: http://YOUR_VPS_IP:3001/api
+NEXT_PUBLIC_API_URL=http://localhost:3001/api
 NEXT_PUBLIC_WS_URL=ws://localhost:3001
